project4-helm/k8s/k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: node-blog-app
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: node-api-app
            port:
              number: 3000
